# MCSrvMonitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.json  config.yaml  config.yaml.example  test.db
assets/: lang.json  lang.yaml  style.css
assets/frontend/: index.html  server.html
backend/: Cargo.toml  config.yaml  history.db
backend/src/: main.rs
docs/: README.zh-CN.md  config.md  config.zh-CN.md
frontend/: Cargo.toml  config.yaml  package-lock.json  package.json
frontend/src/: App.js  main.rs
midend/: .gitignore  Cargo.toml
midend/src/: main.rs
server/: Cargo.toml  config.yaml
server/assets/: lang.json
server/src/: backend.rs  main.rs
server/templates/: index.html.hbs
src/: backend.rs  collector.rs  config.rs  frontend.rs  lib.rs  main.rs  web.rs
templates/: index.html.hbs
